tests/ui/typech/visibility_field_access_priv.lm
struct Foo {
    bar: Int32;
}

impl Foo {
    pub fn new() -> Foo {
        Foo {
            bar: 0
        }
    }
}

fn foo() {
    let foo = Foo::new();
    let _ = foo.bar;
}
